tests/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudguard-api
  labels:
    app: cloudguard
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: cloudguard
    component: api
